# cuda-benchcraft

./: .gitignore  CMakeLists.txt  Makefile  README.md  benchcraft.py
benchcraft/: __init__.py  analysis.py  gemm.py  prompt.py  softmax.py  system.py
common/: cudatools.hpp  filesystem.hpp  flagparse.hpp  vectors.hpp
gemm/: README.md  kernels_cublas.cu  kernels_naive.cu  main.cu
gemm/include/: kernels.hpp  records.hpp
include/: kernels.hpp  utilities.hpp
softmax/: kernels_naive.cu  kernels_reduce.cu  kernels_torch.cpp  main.cu
softmax/include/: kernels.hpp  records.hpp
src/: kernels.cu  kernels_cublas.cu  kernels_naive.cu  main.cu  utils.cu
